# basilisk

docs/source/Support/: bskReleaseNotes.rst
examples/: _default.rst  scenarioMomentumDumpingZeroNetForce.py  scenarioPrescribedArrayDeployment.py  scenario_SADADynamics.py
src/: CMakeLists.txt  riscv_noelv.toolchain.cmake
src/architecture/messaging/: messaging.h
src/architecture/messaging/msgAutoSource/: msg_C.cpp.in
src/architecture/system_model/: sim_model.cpp  sim_model.h
src/fswAlgorithms/attGuidance/_GeneralModuleFiles/: attitudePointingLibrary.cpp  attitudePointingLibrary.h
src/fswAlgorithms/attGuidance/earthPoint/: earthPoint.cpp  earthPoint.h  earthPoint.i
src/fswAlgorithms/effectorInterfaces/stepperMotorController/: stepperMotorController.c
src/fswAlgorithms/effectorInterfaces/stepperMotorController/_UnitTest/: test_stepperMotorController.py
src/fswAlgorithms/orbitControl/lambertSolver/_UnitTest/: test_lambertSolver.py
src/sim-driver/centroiding/: CMakeLists.txt  build_rv32_noelv.sh  main-centroiding.cpp
src/sim-driver/mrp_steering/: CMakeLists.txt
src/sim-driver/sun_safe/: CMakeLists.txt
src/simulation/dynamics/DynamicsArchitecture/System/: System.i
src/simulation/dynamics/KinematicsArchitecture/: Categorizer.cpp  Categorizer.h  Categorizer.i  KinematicsArchitecture.i  KinematicsEngine.h  SixDOFRigidBody.cpp  SixDOFRigidBody.h  System.cpp  System.h  System.i
src/simulation/dynamics/_GeneralModuleFiles/: Categorizer.h  DynamicsEngine.h  SixDOFRigidBody.cpp
src/simulation/dynamics/tests/: CMakeLists.txt  test_categorizer.cpp
(+7 files in other folders)
